2004-06-20  Ethan Merritt  <merritt@u.washington.edu>

	* src/mouse.c (event_reset), src/command.c (pause_command),
	docs/gnuplot.doc: Set MOUSE_KEY to -1 when the "pause mouse {key}" 
	command is issued; if it is still -1 when checked later, then the 
	calling program may assume that no mouse input was successfully given.

	* src/command.c (pause_command): Change the test for legality of
	"pause mouse" command from "if (term_initialised)" to
	"if (mouse_setting.on)". Really it should test whether the current
	terminal supports mousing at all, but we don't yet have such a flag.

	* src/gplt_x11.c (process_event): Translate keystrokes using
	XLookupString() rather than XKeycodeToKeysym(). This method handles
	characters produced using shift, alt, or other multi-key sequences.

	* src/graphics.c (plot_f_bars plot_c_bars), term/gd.trm PNG_options):
	Make sure that the tic size is greater than zero.

2004-06-20  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/graph3d.c (key_sample_line_pm3d key_sample_point_pm3d): Fixed
	wrong step for negative palette.

	* src/color.c (set_color) src/command.c (test_palette_subcommand)
	src/show.c (show_palette_palette): Removed useless comments.

2004-06-19  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/color.c (set_color, draw_inside_color_smooth_box_bitmap)
	src/pm3d.c (cb2gray): Invert gray in routine pm3d.c:cb2gray(cb), instead
	of color.c:set_color(gray). The latter is now just setting
	term->set_color(gray) if the terminal supports set_color() API.

	* graph3d.c (do_3dplot): Fixed set_color(z2cb( cb2gray(cntrs->z)) to 
	set_color(cb2gray( z2cb(cntrs->z) )).

	* gadgets.c (apply_textcolor): Take care of positive/negative palette
	for 'set label ... textcolor frac ...'.

2004-06-17  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c (process_event): Send a GE_reset event back to gnuplot
	if the current plot window is closed.
	* src/mouse.c (event_reset): Terminate paused_for_mouse state whenever a