@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: mouse.c,v 1.56 2004/06/21 03:54:49 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: mouse.c,v 1.57 2004/06/24 16:54:18 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - mouse.c */
@@ -1746,6 +1746,10 @@ event_reset(struct gp_event_t *ge)
 	/* remove pause message box after 'pause mouse' */
 	kill_pending_Pause_dialog();
 #endif
+	/* This hack is necessary for X11 in order to prevent one character */
+	/* of input from being swallowed when the plot window is closed.    */
+	if (term && !strncmp("x11",term->name,3))
+	    ungetc('\n',stdin);
     }
 }
 
